tests/parsing/cmc/errors/164.expected
File "tests/parsing/cmc/errors/164.cmc", line 1, character 23-24:
1 | (declare-enum-sort enum)
                           ^
Error while parsing an enumeration declaration, read a closing parenthesis,
      but expected a list of enumeration variables  `(enum1 enum2 ...)`.
